add brand image

--- a/clone/templates/edit_profile.html
+++ b/clone/templates/edit_profile.html
@@ -22,7 +22,7 @@
 
     <div class="panel-body">
       <div class="logo-header">
-        <img alt="Brand" src="{% static 'img/brand.png' %}" height=70 >
+        <img alt="Brand" src="{% static '.img/brand.png' %}" height=70 >
       </div>
       <form action="{%url 'edit-profile'%}" method="post" enctype="multipart/form-data">
 
