--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -34,7 +34,7 @@
       <a class="navbar-brand bar-pipe"><a>
       <!-- <a class="navbar-brand" style="font-size:30px;font-weight:10">|</a> -->
       <a class="navbar-brand instagramlogo" href="/">
-        <img alt="Brand" src="{% static 'img/brand.png' %}" height=40 >
+        <img alt="Brand" src="{% static 'static/img/brand.png' %}" height=40 >
       </a>
     </div>
   </div>
@@ -56,8 +56,8 @@
 
       <div class="col-md-2 col-lg-2">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'explore'  %}"><span class="fas fa-compass"></span></a></li>
-        <li><a href="{% url 'new-post'%}"><span class="fas fa-heart"></span></a></li>
+      
+        <li><a href="{% url 'new-image'%}"><span class="fas fa-heart"></span></a></li>
         <li><a href="{% url 'profile' %}"><span class="fas fa-user"></span></a></li>
 
 
@@ -65,9 +65,7 @@
       </ul>
     </div>
   <div class="col-md-3 col-lg-3"></div>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+   
 </div>
 
 </nav>
