start user authenticaton

--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -34,7 +34,7 @@
       <a class="navbar-brand bar-pipe"><a>
       <!-- <a class="navbar-brand" style="font-size:30px;font-weight:10">|</a> -->
       <a class="navbar-brand instagramlogo" href="/">
-        <img alt="Brand" src="{% static 'static/img/brand.png' %}" height=40 >
+        <img alt="Brand" src="{% static 'static/img/brand.jpg' %}" height=40 >
       </a>
     </div>
   </div>
