--- a/clone/templates/profile.html
+++ b/clone/templates/profile.html
@@ -39,7 +39,7 @@
     <div class="profile-stats">
 
       <ul>
-        <li><span class="profile-stat-count">{{post_number}}</span> posts</li>
+        <li><span class="profile-stat-count">{{image_number}}</span> images</li>
         <li><span class="profile-stat-count">0</span> followers</li>
         <li><span class="profile-stat-count">0</span> following</li>
       </ul>
@@ -89,7 +89,7 @@
 
 
 
-    <div class="gallery-item" tabindex="0" data-toggle="modal" data-target="#{{post.id}}">
+    <div class="gallery-item" tabindex="0" data-toggle="modal" data-target="#{{image.id}}">
 
       <img src="{{image.image.url}}?w=500&h=500&fit=crop" class="gallery-image"  id="likes-{{forloop.counter0}}" data-comid="{{Image.id}}" >
       <div class="gallery-item-info">
@@ -103,7 +103,7 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="{{post.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -112,22 +112,22 @@
           <div class="modal-profile-image">
             <img src="{{image.profile_pic.url}}?w=50&h=50&fit=crop" class="gallery-image" alt=""  width=8 height=8>
           </div>
-              <p class="username">{{post.username}}</p>
-              <footer class="location">{{post.location}}</footer>
+              <p class="username">{{image.username}}</p>
+              
           </div>
 
         </div>
         <div class="modal-body">
-              <img src="{{post.post.url}}?w=800&h=1000&fit=crop" class="gallery-image like" id="likes-{{forloop.counter0}}" data-comid="{{post.id}}">
+              <img src="{{image.image.url}}?w=800&h=1000&fit=crop" class="gallery-image like" id="likes-{{forloop.counter0}}" data-comid="{{image.id}}">
         </div>
         <div class="modal-footer">
-          <p class="card-title username like"  id="likes-{{forloop.counter0}}" data-comid="{{post.id}}" >{{post.likes}} likes</p>
-          <p class="username">{{post.username}} <span class="caption">{{post.caption|truncatechars:300 |safe }}</span></p>
+          <p class="card-title username like"  id="likes-{{forloop.counter0}}" data-comid="{{image.id}}" >{{image.likes}} likes</p>
+          <p class="username">{{image.username}} <span class="caption">{{image.caption|truncatechars:300 |safe }}</span></p>
 
 
-        <div id="card{{post.id}}" class="mt-2">
+        <div id="card{{image.id}}" class="mt-2">
                {%for comment in comments%}
-                   {%if comment.post == post.id%}
+                   {%if comment.image == image.id%}
                    <p>
                        <strong>{{comment.username.username}}</strong> {{comment.comment}}
                    </p>
@@ -138,7 +138,7 @@
         <div class="modal-footer">
 
         <div class="text-center">
-          <form method="post" enctype="multipart/form-data" id='comment{{post.id}}' class="commentformsize">
+          <form method="image" enctype="multipart/form-data" id='comment{{image.id}}' class="commentformsize">
             {% csrf_token %}
             {% bootstrap_form form%}
           </form>
