change urls  for  account login

--- a/clone/templates/change_profile.html
+++ b/clone/templates/change_profile.html
@@ -37,10 +37,7 @@
       </form>
     </div>
   </div>
-
-
-="btn btn-success btn-lg" action="{% url 'profile'%}"value="Share">
-  </form> -->
+  </form> 
 
    {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
