--- a/clone/templates/base.html
+++ b/clone/templates/base.html
@@ -12,7 +12,7 @@
     <title> Insta-Clone </title>
   {% endif %}
 
-  {% include 'navbar.html' %}
+
   {% block content %}
   <!-- <h1 class="text-center">Instagram</h1> -->
 
@@ -27,6 +27,42 @@
   
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="dropdown-toggle btn btn-default" data-toggle="dropdown" data-target="#bs-example-navbar-collapse-1" role="button" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'Homepage' %}">Instagram</a>
+        </div>
+        <div class="dropdown" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'new-image'%}"><span class="far fa-plus-square">add image</span></a></li>
+                    <li><a href="{% url 'profile' %}"><span class="fas fa-user">view profile</span></a></li>
+                    <li><a href="/accounts/logout/">Logout</a></li>
+                {% else %}
+                    <li><a href="/accounts/login/">Login</a></li>
+                    <li><a href="/accounts/signup">Signup</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="col-md-2 col-lg-2">
+        <form class="navbar-form navbar-left" action="{% url 'search_results'%}">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search" name="user">
+
+              </div>
+        </form>
+      </div>      
+    </div>
+</nav>
     
     
     {% block scripts %}
