--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -11,65 +11,31 @@
   </head>
 
   <body>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 col-lg-3">
+      <nav class="navbar navbar-default">
+        <div class="navbar-header">
+          <a class="navbar-brand instagramlogo" href="/"><img alt="Brand" src="{% static 'static/img/brand.jpg' %}" height=40 ></a>
+          <a href="{% url 'new-image'%}"><span class="far fa-plus-square">add image</span></a></li>
+          <a href="{% url 'profile' %}"><span class="fas fa-user">view profile</span></a></li>
 
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="col-md-2 col-lg-2">
+              <form class="navbar-form navbar-left" action="{% url 'search_results'%}">
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Search" name="user">
 
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="row">
-      <div class="col-md-3 col-lg-3"></div>
-
-    <div class="col-md-2 col-lg-2">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">
-        <img alt="Brand" src="{% static 'img/navbar.png' %}" width=24 height=24>
-      </a>
-      <a class="navbar-brand bar-pipe"><a>
-      <!-- <a class="navbar-brand" style="font-size:30px;font-weight:10">|</a> -->
-      <a class="navbar-brand instagramlogo" href="/">
-        <img alt="Brand" src="{% static 'static/img/brand.jpg' %}" height=40 >
-      </a>
+                    </div>
+              </form>
+            </div>      
+          </div>
+       </nav>
+      </div>
     </div>
   </div>
 
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <div class="col-md-2 col-lg-2">
-      <form class="navbar-form navbar-left" action="{% url 'search_results'%}">
-             <div class="form-group">
-               <input type="text" class="form-control" placeholder="Search" name="user">
-
-             </div>
-
-           </form>
-         </div>
-
-
-      <div class="col-md-2 col-lg-2">
-      <ul class="nav navbar-nav navbar-right">
-      
-        <li><a href="{% url 'new-image'%}"><span class="fas fa-heart"></span></a></li>
-        <li><a href="{% url 'profile' %}"><span class="fas fa-user"></span></a></li>
-
-
-
-      </ul>
-    </div>
-  <div class="col-md-3 col-lg-3"></div>
-   
-</div>
-
-</nav>
-  </body>
+</body>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
