--- a/clone/templates/base.html
+++ b/clone/templates/base.html
@@ -27,7 +27,7 @@
   
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar ">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="dropdown-toggle btn btn-default" data-toggle="dropdown" data-target="#bs-example-navbar-collapse-1" role="button" aria-expanded="false">
