--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -18,7 +18,7 @@
         <div class="navbar-header">
           <a class="navbar-brand instagramlogo" href="/"><img alt="Brand" src="{% static 'static/img/brand.jpg' %}" height=40 ></a>
           <a href="{% url 'new-image'%}"><span class="far fa-plus-square">add image</span></a></li>
-          <a href="{% url 'profile' %}"><span class="fas fa-user">view profile</span></a></li>
+          <a href=" profile/"><span class="fas fa-user">view profile</span></a></li>
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="col-md-2 col-lg-2">
